added delete user avatar route
